prototype/tabulata-1/WebContent/js/lib/parser.js
listcalcParser = (function(){
	  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
	  
	  var result = {
	    /*
	     * Parses the input with a generated parser. If the parsing is successfull,
	     * returns a value explicitly or implicitly specified by the grammar from
	     * which the parser was generated (see |PEG.buildParser|). If the parsing is
	     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
	     */
	    parse: function(input, startRule) {
	      var parseFunctions = {
	        "__": parse___,
	        "additive": parse_additive,
	        "bool": parse_bool,
	        "boolAnd": parse_boolAnd,
	        "comparison": parse_comparison,
	        "eol": parse_eol,
	        "eolChar": parse_eolChar,
	        "function": parse_function,
	        "identifier": parse_identifier,
	        "multiplicative": parse_multiplicative,
	        "number": parse_number,
	        "paramList": parse_paramList,
	        "params": parse_params,
	        "path": parse_path,
	        "pathEx": parse_pathEx,
	        "primary": parse_primary,
	        "whitespace": parse_whitespace
	      };
	      
	      if (startRule !== undefined) {
	        if (parseFunctions[startRule] === undefined) {
	          throw new Error("Invalid rule name: " + quote(startRule) + ".");
	        }
	      } else {
	        startRule = "bool";
	      }
	      
	      var pos = 0;
	      var reportMatchFailures = true;
	      var rightmostMatchFailuresPos = 0;
	      var rightmostMatchFailuresExpected = [];
	      var cache = {};
	      
	      function padLeft(input, padding, length) {
	        var result = input;
	        
	        var padLength = length - input.length;
	        for (var i = 0; i < padLength; i++) {
	          result = padding + result;
	        }
	        
	        return result;
	      }
	      
	      function escape(ch) {
	        var charCode = ch.charCodeAt(0);
	        
	        if (charCode <= 0xFF) {
	          var escapeChar = 'x';
	          var length = 2;
	        } else {
	          var escapeChar = 'u';
	          var length = 4;
	        }
	        
	        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
	      }
	      
	      function quote(s) {
	        /*
	         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
	         * string literal except for the closing quote character, backslash,
	         * carriage return, line separator, paragraph separator, and line feed.
	         * Any character may appear in the form of an escape sequence.
	         */
	        return '"' + s
	          .replace(/\\/g, '\\\\')            // backslash
	          .replace(/"/g, '\\"')              // closing quote character
	          .replace(/\r/g, '\\r')             // carriage return
	          .replace(/\n/g, '\\n')             // line feed
	          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
	          + '"';
	      }
	      
	      function matchFailed(failure) {
	        if (pos < rightmostMatchFailuresPos) {
	          return;
	        }
	        
	        if (pos > rightmostMatchFailuresPos) {
	          rightmostMatchFailuresPos = pos;
	          rightmostMatchFailuresExpected = [];
	        }
	        
	        rightmostMatchFailuresExpected.push(failure);
	      }
	      
	      function parse_bool() {
	        var cacheKey = 'bool@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        var result5 = parse_boolAnd();
	        if (result5 !== null) {
	          if (input.substr(pos, 2) === "||") {
	            var result6 = "||";
	            pos += 2;
	          } else {
	            var result6 = null;
	            if (reportMatchFailures) {
	              matchFailed("\"||\"");
	            }
	          }
	          if (result6 !== null) {
	            var result7 = parse_bool();
	            if (result7 !== null) {
	              var result3 = [result5, result6, result7];
	            } else {
	              var result3 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result3 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result3 = null;
	          pos = savedPos1;
	        }
	        var result4 = result3 !== null
	          ? (function(left, right) { return binary("||", left, right); })(result3[0], result3[2])
	          : null;
	        if (result4 !== null) {
	          var result2 = result4;
	        } else {
	          var result2 = null;
	          pos = savedPos0;
	        }
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result1 = parse_boolAnd();
	          if (result1 !== null) {
	            var result0 = result1;
	          } else {
	            var result0 = null;;
	          };
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_boolAnd() {
	        var cacheKey = 'boolAnd@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        var result5 = parse_comparison();
	        if (result5 !== null) {
	          if (input.substr(pos, 2) === "&&") {
	            var result6 = "&&";
	            pos += 2;
	          } else {
	            var result6 = null;
	            if (reportMatchFailures) {
	              matchFailed("\"&&\"");
	            }
	          }
	          if (result6 !== null) {
	            var result7 = parse_boolAnd();
	            if (result7 !== null) {
	              var result3 = [result5, result6, result7];
	            } else {
	              var result3 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result3 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result3 = null;
	          pos = savedPos1;
	        }
	        var result4 = result3 !== null
	          ? (function(left, right) { return binary("&&", left, right); })(result3[0], result3[2])
	          : null;
	        if (result4 !== null) {
	          var result2 = result4;
	        } else {
	          var result2 = null;
	          pos = savedPos0;
	        }
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result1 = parse_comparison();
	          if (result1 !== null) {
	            var result0 = result1;
	          } else {
	            var result0 = null;;
	          };
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_comparison() {
	        var cacheKey = 'comparison@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos4 = pos;
	        var savedPos5 = pos;
	        var result17 = parse_additive();
	        if (result17 !== null) {
	          if (input.substr(pos, 1) === "<") {
	            var result18 = "<";
	            pos += 1;
	          } else {
	            var result18 = null;
	            if (reportMatchFailures) {
	              matchFailed("\"<\"");
	            }
	          }
	          if (result18 !== null) {
	            var result19 = parse_additive();
	            if (result19 !== null) {
	              var result15 = [result17, result18, result19];
	            } else {
	              var result15 = null;
	              pos = savedPos5;
	            }
	          } else {
	            var result15 = null;
	            pos = savedPos5;
	          }
	        } else {
	          var result15 = null;
	          pos = savedPos5;
	        }
	        var result16 = result15 !== null
	          ? (function(left, right) { return binary("<", left, right); })(result15[0], result15[2])
	          : null;
	        if (result16 !== null) {
	          var result14 = result16;
	        } else {
	          var result14 = null;
	          pos = savedPos4;
	        }
	        if (result14 !== null) {
	          var result0 = result14;
	        } else {
	          var savedPos2 = pos;
	          var savedPos3 = pos;
	          var result11 = parse_additive();
	          if (result11 !== null) {
	            if (input.substr(pos, 1) === ">") {
	              var result12 = ">";
	              pos += 1;
	            } else {
	              var result12 = null;
	              if (reportMatchFailures) {
	                matchFailed("\">\"");
	              }
	            }
	            if (result12 !== null) {
	              var result13 = parse_additive();
	              if (result13 !== null) {
	                var result9 = [result11, result12, result13];
	              } else {
	                var result9 = null;
	                pos = savedPos3;
	              }
	            } else {
	              var result9 = null;
	              pos = savedPos3;
	            }
	          } else {
	            var result9 = null;
	            pos = savedPos3;
	          }
	          var result10 = result9 !== null
	            ? (function(left, right) { return binary(">", left, right); })(result9[0], result9[2])
	            : null;
	          if (result10 !== null) {
	            var result8 = result10;
	          } else {
	            var result8 = null;
	            pos = savedPos2;
	          }
	          if (result8 !== null) {
	            var result0 = result8;
	          } else {
	            var savedPos0 = pos;
	            var savedPos1 = pos;
	            var result5 = parse_additive();
	            if (result5 !== null) {
	              if (input.substr(pos, 2) === "==") {
	                var result6 = "==";
	                pos += 2;
	              } else {
	                var result6 = null;
	                if (reportMatchFailures) {
	                  matchFailed("\"==\"");
	                }
	              }
	              if (result6 !== null) {
	                var result7 = parse_additive();
	                if (result7 !== null) {
	                  var result3 = [result5, result6, result7];
	                } else {
	                  var result3 = null;
	                  pos = savedPos1;
	                }
	              } else {
	                var result3 = null;
	                pos = savedPos1;
	              }
	            } else {
	              var result3 = null;
	              pos = savedPos1;
	            }
	            var result4 = result3 !== null
	              ? (function(left, right) { return binary("==", left, right); })(result3[0], result3[2])
	              : null;
	            if (result4 !== null) {
	              var result2 = result4;
	            } else {
	              var result2 = null;
	              pos = savedPos0;
	            }
	            if (result2 !== null) {
	              var result0 = result2;
	            } else {
	              var result1 = parse_additive();
	              if (result1 !== null) {
	                var result0 = result1;
	              } else {
	                var result0 = null;;
	              };
	            };
	          };
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_additive() {
	        var cacheKey = 'additive@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos2 = pos;
	        var savedPos3 = pos;
	        var result11 = parse_multiplicative();
	        if (result11 !== null) {
	          if (input.substr(pos, 1) === "+") {
	            var result12 = "+";
	            pos += 1;
	          } else {
	            var result12 = null;
	            if (reportMatchFailures) {
	              matchFailed("\"+\"");
	            }
	          }
	          if (result12 !== null) {
	            var result13 = parse_additive();
	            if (result13 !== null) {
	              var result9 = [result11, result12, result13];
	            } else {
	              var result9 = null;
	              pos = savedPos3;
	            }
	          } else {
	            var result9 = null;
	            pos = savedPos3;
	          }
	        } else {
	          var result9 = null;
	          pos = savedPos3;
	        }
	        var result10 = result9 !== null
	          ? (function(left, right) { return binary("+", left, right); })(result9[0], result9[2])
	          : null;
	        if (result10 !== null) {
	          var result8 = result10;
	        } else {
	          var result8 = null;
	          pos = savedPos2;
	        }
	        if (result8 !== null) {
	          var result0 = result8;
	        } else {
	          var savedPos0 = pos;
	          var savedPos1 = pos;
	          var result5 = parse_multiplicative();
	          if (result5 !== null) {
	            if (input.substr(pos, 1) === "-") {
	              var result6 = "-";
	              pos += 1;
	            } else {
	              var result6 = null;
	              if (reportMatchFailures) {
	                matchFailed("\"-\"");
	              }
	            }
	            if (result6 !== null) {
	              var result7 = parse_additive();
	              if (result7 !== null) {
	                var result3 = [result5, result6, result7];
	              } else {
	                var result3 = null;
	                pos = savedPos1;
	              }
	            } else {
	              var result3 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result3 = null;
	            pos = savedPos1;
	          }
	          var result4 = result3 !== null
	            ? (function(left, right) { return binary("-", left, right); })(result3[0], result3[2])
	            : null;
	          if (result4 !== null) {
	            var result2 = result4;
	          } else {
	            var result2 = null;
	            pos = savedPos0;
	          }
	          if (result2 !== null) {
	            var result0 = result2;
	          } else {
	            var result1 = parse_multiplicative();
	            if (result1 !== null) {
	              var result0 = result1;
	            } else {
	              var result0 = null;;
	            };
	          };
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_multiplicative() {
	        var cacheKey = 'multiplicative@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos2 = pos;
	        var savedPos3 = pos;
	        var result11 = parse_primary();
	        if (result11 !== null) {
	          if (input.substr(pos, 1) === "*") {
	            var result12 = "*";
	            pos += 1;
	          } else {
	            var result12 = null;
	            if (reportMatchFailures) {
	              matchFailed("\"*\"");
	            }
	          }
	          if (result12 !== null) {
	            var result13 = parse_multiplicative();
	            if (result13 !== null) {
	              var result9 = [result11, result12, result13];
	            } else {
	              var result9 = null;
	              pos = savedPos3;
	            }
	          } else {
	            var result9 = null;
	            pos = savedPos3;
	          }
	        } else {
	          var result9 = null;
	          pos = savedPos3;
	        }
	        var result10 = result9 !== null
	          ? (function(left, right) { return binary("*", left, right); })(result9[0], result9[2])
	          : null;
	        if (result10 !== null) {
	          var result8 = result10;
	        } else {
	          var result8 = null;
	          pos = savedPos2;
	        }
	        if (result8 !== null) {
	          var result0 = result8;
	        } else {
	          var savedPos0 = pos;
	          var savedPos1 = pos;
	          var result5 = parse_primary();
	          if (result5 !== null) {
	            if (input.substr(pos, 1) === "/") {
	              var result6 = "/";
	              pos += 1;
	            } else {
	              var result6 = null;
	              if (reportMatchFailures) {
	                matchFailed("\"/\"");
	              }
	            }
	            if (result6 !== null) {
	              var result7 = parse_multiplicative();
	              if (result7 !== null) {
	                var result3 = [result5, result6, result7];
	              } else {
	                var result3 = null;
	                pos = savedPos1;
	              }
	            } else {
	              var result3 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result3 = null;
	            pos = savedPos1;
	          }
	          var result4 = result3 !== null
	            ? (function(left, right) { return binary("/", left, right); })(result3[0], result3[2])
	            : null;
	          if (result4 !== null) {
	            var result2 = result4;
	          } else {
	            var result2 = null;
	            pos = savedPos0;
	          }
	          if (result2 !== null) {
	            var result0 = result2;
	          } else {
	            var result1 = parse_primary();
	            if (result1 !== null) {
	              var result0 = result1;
	            } else {
	              var result0 = null;;
	            };
	          };
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_primary() {
	        var cacheKey = 'primary@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos6 = pos;
	        var savedPos7 = pos;
	        var result23 = parse___();
	        if (result23 !== null) {
	          var result24 = parse_number();
	          if (result24 !== null) {
	            var result25 = parse___();
	            if (result25 !== null) {
	              var result21 = [result23, result24, result25];
	            } else {
	              var result21 = null;
	              pos = savedPos7;
	            }
	          } else {
	            var result21 = null;
	            pos = savedPos7;
	          }
	        } else {
	          var result21 = null;
	          pos = savedPos7;
	        }
	        var result22 = result21 !== null
	          ? (function(nb) { return nb; })(result21[1])
	          : null;
	        if (result22 !== null) {
	          var result20 = result22;
	        } else {
	          var result20 = null;
	          pos = savedPos6;
	        }
	        if (result20 !== null) {
	          var result0 = result20;
	        } else {
	          var result19 = parse_path();
	          if (result19 !== null) {
	            var result0 = result19;
	          } else {
	            var savedPos2 = pos;
	            var savedPos3 = pos;
	            var result11 = parse___();
	            if (result11 !== null) {
	              if (input.substr(pos, 1) === "{") {
	                var result12 = "{";
	                pos += 1;
	              } else {
	                var result12 = null;
	                if (reportMatchFailures) {
	                  matchFailed("\"{\"");
	                }
	              }
	              if (result12 !== null) {
	                var result13 = [];
	                var savedPos4 = pos;
	                var savedPos5 = pos;
	                var savedReportMatchFailuresVar0 = reportMatchFailures;
	                reportMatchFailures = false;
	                if (input.substr(pos, 1) === "}") {
	                  var result18 = "}";
	                  pos += 1;
	                } else {
	                  var result18 = null;
	                  if (reportMatchFailures) {
	                    matchFailed("\"}\"");
	                  }
	                }
	                reportMatchFailures = savedReportMatchFailuresVar0;
	                if (result18 === null) {
	                  var result16 = '';
	                } else {
	                  var result16 = null;
	                  pos = savedPos5;
	                }
	                if (result16 !== null) {
	                  if (input.length > pos) {
	                    var result17 = input.charAt(pos);
	                    pos++;
	                  } else {
	                    var result17 = null;
	                    if (reportMatchFailures) {
	                      matchFailed('any character');
	                    }
	                  }
	                  if (result17 !== null) {
	                    var result15 = [result16, result17];
	                  } else {
	                    var result15 = null;
	                    pos = savedPos4;
	                  }
	                } else {
	                  var result15 = null;
	                  pos = savedPos4;
	                }
	                while (result15 !== null) {
	                  result13.push(result15);
	                  var savedPos4 = pos;
	                  var savedPos5 = pos;
	                  var savedReportMatchFailuresVar0 = reportMatchFailures;
	                  reportMatchFailures = false;
	                  if (input.substr(pos, 1) === "}") {
	                    var result18 = "}";
	                    pos += 1;
	                  } else {
	                    var result18 = null;
	                    if (reportMatchFailures) {
	                      matchFailed("\"}\"");
	                    }
	                  }
	                  reportMatchFailures = savedReportMatchFailuresVar0;
	                  if (result18 === null) {
	                    var result16 = '';
	                  } else {
	                    var result16 = null;
	                    pos = savedPos5;
	                  }
	                  if (result16 !== null) {
	                    if (input.length > pos) {
	                      var result17 = input.charAt(pos);
	                      pos++;
	                    } else {
	                      var result17 = null;
	                      if (reportMatchFailures) {
	                        matchFailed('any character');
	                      }
	                    }
	                    if (result17 !== null) {
	                      var result15 = [result16, result17];
	                    } else {
	                      var result15 = null;
	                      pos = savedPos4;
	                    }
	                  } else {
	                    var result15 = null;
	                    pos = savedPos4;
	                  }
	                }
	                if (result13 !== null) {
	                  if (input.substr(pos, 1) === "}") {
	                    var result14 = "}";
	                    pos += 1;
	                  } else {
	                    var result14 = null;
	                    if (reportMatchFailures) {
	                      matchFailed("\"}\"");
	                    }
	                  }
	                  if (result14 !== null) {
	                    var result9 = [result11, result12, result13, result14];
	                  } else {
	                    var result9 = null;
	                    pos = savedPos3;
	                  }
	                } else {
	                  var result9 = null;
	                  pos = savedPos3;
	                }
	              } else {
	                var result9 = null;
	                pos = savedPos3;
	              }
	            } else {
	              var result9 = null;
	              pos = savedPos3;
	            }
	            var result10 = result9 !== null
	              ? (function(js) { return {
	                        type: "js", 
	                        execution: js.map(function(a){return a[1]}).join("")
	                      };
	                    })(result9[2])
	              : null;
	            if (result10 !== null) {
	              var result8 = result10;
	            } else {
	              var result8 = null;
	              pos = savedPos2;
	            }
	            if (result8 !== null) {
	              var result0 = result8;
	            } else {
	              var savedPos0 = pos;
	              var savedPos1 = pos;
	              var result4 = parse___();
	              if (result4 !== null) {
	                if (input.substr(pos, 1) === "(") {
	                  var result5 = "(";
	                  pos += 1;
	                } else {
	                  var result5 = null;
	                  if (reportMatchFailures) {
	                    matchFailed("\"(\"");
	                  }
	                }
	                if (result5 !== null) {
	                  var result6 = parse_additive();
	                  if (result6 !== null) {
	                    if (input.substr(pos, 1) === ")") {
	                      var result7 = ")";
	                      pos += 1;
	                    } else {
	                      var result7 = null;
	                      if (reportMatchFailures) {
	                        matchFailed("\")\"");
	                      }
	                    }
	                    if (result7 !== null) {
	                      var result2 = [result4, result5, result6, result7];
	                    } else {
	                      var result2 = null;
	                      pos = savedPos1;
	                    }
	                  } else {
	                    var result2 = null;
	                    pos = savedPos1;
	                  }
	                } else {
	                  var result2 = null;
	                  pos = savedPos1;
	                }
	              } else {
	                var result2 = null;
	                pos = savedPos1;
	              }
	              var result3 = result2 !== null
	                ? (function(additive) { return additive; })(result2[2])
	                : null;
	              if (result3 !== null) {
	                var result1 = result3;
	              } else {
	                var result1 = null;
	                pos = savedPos0;
	              }
	              if (result1 !== null) {
	                var result0 = result1;
	              } else {
	                var result0 = null;;
	              };
	            };
	          };
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_path() {
	        var cacheKey = 'path@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        var result3 = parse_function();
	        if (result3 !== null) {
	          var result5 = parse_pathEx();
	          var result4 = result5 !== null ? result5 : '';
	          if (result4 !== null) {
	            var result1 = [result3, result4];
	          } else {
	            var result1 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result1 = null;
	          pos = savedPos1;
	        }
	        var result2 = result1 !== null
	          ? (function(f, p) {
	              if (p==="") return f;
	          	return {
	          	  type: "access",
	          	  data: f,
	          	  operand: p
	          	};
	          })(result1[0], result1[1])
	          : null;
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result0 = null;
	          pos = savedPos0;
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_pathEx() {
	        var cacheKey = 'pathEx@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        var result3 = parse___();
	        if (result3 !== null) {
	          if (input.substr(pos, 1) === ".") {
	            var result4 = ".";
	            pos += 1;
	          } else {
	            var result4 = null;
	            if (reportMatchFailures) {
	              matchFailed("\".\"");
	            }
	          }
	          if (result4 !== null) {
	            var result5 = parse_path();
	            if (result5 !== null) {
	              var result1 = [result3, result4, result5];
	            } else {
	              var result1 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result1 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result1 = null;
	          pos = savedPos1;
	        }
	        var result2 = result1 !== null
	          ? (function(p) {return p;})(result1[2])
	          : null;
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result0 = null;
	          pos = savedPos0;
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_function() {
	        var cacheKey = 'function@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        var result3 = parse___();
	        if (result3 !== null) {
	          var result4 = parse_identifier();
	          if (result4 !== null) {
	            var result5 = parse___();
	            if (result5 !== null) {
	              var result7 = parse_paramList();
	              var result6 = result7 !== null ? result7 : '';
	              if (result6 !== null) {
	                var result1 = [result3, result4, result5, result6];
	              } else {
	                var result1 = null;
	                pos = savedPos1;
	              }
	            } else {
	              var result1 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result1 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result1 = null;
	          pos = savedPos1;
	        }
	        var result2 = result1 !== null
	          ? (function(id, pa) {
	               if (pa === "") return { type: "identifier", name: id };
	               return { type: "identifier", name: id, param:pa };
	             })(result1[1], result1[3])
	          : null;
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result0 = null;
	          pos = savedPos0;
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_paramList() {
	        var cacheKey = 'paramList@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        if (input.substr(pos, 1) === "(") {
	          var result3 = "(";
	          pos += 1;
	        } else {
	          var result3 = null;
	          if (reportMatchFailures) {
	            matchFailed("\"(\"");
	          }
	        }
	        if (result3 !== null) {
	          var result4 = parse___();
	          if (result4 !== null) {
	            var result5 = parse_params();
	            if (result5 !== null) {
	              var result6 = parse___();
	              if (result6 !== null) {
	                if (input.substr(pos, 1) === ")") {
	                  var result7 = ")";
	                  pos += 1;
	                } else {
	                  var result7 = null;
	                  if (reportMatchFailures) {
	                    matchFailed("\")\"");
	                  }
	                }
	                if (result7 !== null) {
	                  var result1 = [result3, result4, result5, result6, result7];
	                } else {
	                  var result1 = null;
	                  pos = savedPos1;
	                }
	              } else {
	                var result1 = null;
	                pos = savedPos1;
	              }
	            } else {
	              var result1 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result1 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result1 = null;
	          pos = savedPos1;
	        }
	        var result2 = result1 !== null
	          ? (function(p) { return p; })(result1[2])
	          : null;
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result0 = null;
	          pos = savedPos0;
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_params() {
	        var cacheKey = 'params@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        var result3 = parse_bool();
	        if (result3 !== null) {
	          var result4 = parse___();
	          if (result4 !== null) {
	            var result5 = [];
	            var savedPos2 = pos;
	            var result7 = parse___();
	            if (result7 !== null) {
	              if (input.substr(pos, 1) === ",") {
	                var result8 = ",";
	                pos += 1;
	              } else {
	                var result8 = null;
	                if (reportMatchFailures) {
	                  matchFailed("\",\"");
	                }
	              }
	              if (result8 !== null) {
	                var result9 = parse___();
	                if (result9 !== null) {
	                  var result10 = parse_bool();
	                  if (result10 !== null) {
	                    var result6 = [result7, result8, result9, result10];
	                  } else {
	                    var result6 = null;
	                    pos = savedPos2;
	                  }
	                } else {
	                  var result6 = null;
	                  pos = savedPos2;
	                }
	              } else {
	                var result6 = null;
	                pos = savedPos2;
	              }
	            } else {
	              var result6 = null;
	              pos = savedPos2;
	            }
	            while (result6 !== null) {
	              result5.push(result6);
	              var savedPos2 = pos;
	              var result7 = parse___();
	              if (result7 !== null) {
	                if (input.substr(pos, 1) === ",") {
	                  var result8 = ",";
	                  pos += 1;
	                } else {
	                  var result8 = null;
	                  if (reportMatchFailures) {
	                    matchFailed("\",\"");
	                  }
	                }
	                if (result8 !== null) {
	                  var result9 = parse___();
	                  if (result9 !== null) {
	                    var result10 = parse_bool();
	                    if (result10 !== null) {
	                      var result6 = [result7, result8, result9, result10];
	                    } else {
	                      var result6 = null;
	                      pos = savedPos2;
	                    }
	                  } else {
	                    var result6 = null;
	                    pos = savedPos2;
	                  }
	                } else {
	                  var result6 = null;
	                  pos = savedPos2;
	                }
	              } else {
	                var result6 = null;
	                pos = savedPos2;
	              }
	            }
	            if (result5 !== null) {
	              var result1 = [result3, result4, result5];
	            } else {
	              var result1 = null;
	              pos = savedPos1;
	            }
	          } else {
	            var result1 = null;
	            pos = savedPos1;
	          }
	        } else {
	          var result1 = null;
	          pos = savedPos1;
	        }
	        var result2 = result1 !== null
	          ? (function(ps, pa) {  if (pa === "") return [ps];
	                var px = pa.map(function(a){return a[3]});
	                px.unshift(ps);
	                return px;
	             })(result1[0], result1[2])
	          : null;
	        if (result2 !== null) {
	          var result0 = result2;
	        } else {
	          var result0 = null;
	          pos = savedPos0;
	        }
	        
	        
	        
	        cache[cacheKey] = {
	          nextPos: pos,
	          result:  result0
	        };
	        return result0;
	      }
	      
	      function parse_number() {
	        var cacheKey = 'number@' + pos;
	        var cachedResult = cache[cacheKey];
	        if (cachedResult) {
	          pos = cachedResult.nextPos;
	          return cachedResult.result;
	        }
	        
	        var savedReportMatchFailures = reportMatchFailures;
	        reportMatchFailures = false;
	        var savedPos0 = pos;
	        var savedPos1 = pos;
	        if (input.substr(pos, 1) === "-") {
	          var result10 = "-";
	          pos += 1;
	        } else {
	          var result10 = null;
	          if (reportMatchFailures) {
	            matchFailed("\"-\"");
	          }
	        }
	        var result3 = result10 !== null ? result10 : '';
	        if (result3 !== null) {
	          if (input.substr(pos).match(/^[0-9]/) !== null) {
	            var result9 = input.charAt(pos);
	            pos++;
	          } else {
	            var result9 = null;
	            if (reportMatchFailures) {
	              matchFailed("[0-9]");
	            }
	          }
	          if (result9 !== null) {
	            var result4 = [];
	            while (result9 !== null) {
	              result4.push(result9);
	              if (input.substr(pos).match(/^[0-9]/) !== null) {
	                var result9 = input.charAt(pos);
	                pos++;
